# WordConverter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DigitsToNumbers.cpp  DigitsToNumbers.h  FileHandler.cpp  FileHandler.h  WordConverter.cpp  WordConverter.h  file1.txt  file2.txt  main.cpp
test/: CMakeLists.txt  WordConverter_test.cpp
